[Changes 1.2.2]

* scr-bx now lists the detached screens if there is more than one that matches
  the string supplied by the user. (caf)

* Rename exported function move_to_abs_word() to move_to_word(). (caf)

* Make "You can't hide an invisible window" message respect
  /SET WINDOW_QUIET. (caf)

* Allow $mychannels() to query a window attached to a different server. (caf)

* Fix crash when passing $mychannels() a non-existent window refnum. (caf)

* Remove dll_functions, dll_numeric, dll_commands, dll_variable, dll_ctcp,
  and dll_window variables from the module exports table. (caf)

* Add save_dllvar() function exported to modules, and switch cavlink
  and nap plugins to use it. (caf)

* Shitlist level 3/4 should kick regardless of /CSET KICK_IF_BANNED. 
  Reported by Ancient. (caf)

* Correct spelling of some client messages. (gdinit)

* Support fractional-second intervals on recurring timers. (caf)

* Change $geom() to return current screen's geometry, not the original
  terminal's. (caf)

* Fix $statsparse() scripting function to handle right-justified status
  formats correctly and improve efficiency of all status formatting. (caf)

* Restore terminal settings after flushing output, not before. (caf)

* Remove exported function create_server_list(). (caf)

* Fix $myservers(1) to only return registered server refnums, so it now
  works the way EPIC does which was always the intention. (caf)

* Fix CHANGE_NICK_ON_KILL feature. (caf)

* Improve error handling in /READLOG. (caf)

* Fix memory leak in /QUEUE -FLUSH. (caf)

* Messages sent by /SV and /PASTE should be logged in the send log. (caf)

* Change send_text() to combine command, hook and log arguments into one
  set of flags. (caf)

* Update to build against modern libtcl (don't access tcl_interp->result
  directly). (caf)

* Add /FSET SEND_ENCRYPTED_PUBLIC format. (caf)

* Correct order of arguments to /FSET SEND_ENCRYPTED_MSG and
  SEND_ENCRYPTED_NOTICE and improve default formatting. (caf)
