@@ -30,7 +30,7 @@ char *	BX_upper 			(char *);
 char *	BX_lower 			(char *);
 char *inv_strpbrk(const char *s, const char *reject);
 char *	BX_sindex			(const char *, const char *);
-char *	BX_rsindex 		(const char *, const char *, const char *, int);
+char *	BX_rsindex 		(const char *, const char *, const char *);
 char *	BX_path_search 		(char *, char *);
 char *	BX_double_quote 		(const char *, const char *, char *);
 
@@ -133,7 +133,7 @@ char *	base64_encode	(const void *data, size_t size);
 /* From words.c */
 #define SOS -32767
 #define EOS 32767
-char *BX_strsearch(const char *, const char *, const char *, int);
+char *BX_strsearch(const char *, const char *, int);
 char *BX_move_to_word(const char *, int);
 char *BX_move_word_rel(const char *, char **, int);
 char *BX_extract(char *, int, int);
